--- a/scss/custom-styles.scss
+++ b/scss/custom-styles.scss
@@ -34,10 +34,15 @@ $body-color:    $gray-600 ;
 
 
 // ********************* ***  page d'acceuil (home) *** ************************* //
-.home-section{
-  height: 75vh;
+.home-section, .contact-section{
   z-index: 100;
   color: white;
+}
+.home-section{
+  height: 75vh;
+}
+.contact-section{
+  height: 50vh;
 }
 
 .quick-contact-section{
@@ -48,11 +53,6 @@ $body-color:    $gray-600 ;
 .home-section-content{
   height: 80%;
 }
-
-nav{
-  height: 20%;
-}
-
 
 // taille telephone
 @media(max-width: map-get($map: $grid-breakpoints, $key: md)){
@@ -69,10 +69,13 @@ nav{
 .color-bg{
   height: 80vh;
   width: 100vw;;
-  z-index: -1;
+  z-index: -999;
   position: absolute;
   top: 0;
   left: 0;
+}
+.color-bg-mini{
+  height: 50vh;
 }
 .color-bg-secondary{
   width: 40%;
@@ -141,5 +144,82 @@ nav{
 
 .color-light{
   color: white;
+}
+
+
+
+//************** *** header *** *************************//
+//css
+.navbar {
+  position: absolute;
+  width: 100%;
+  color: #fff;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: padding 0.3s linear;
+  -webkit-transition: padding 0.3s linear;
+  z-index: 999;
+}
+.navbar-fixed .container {
+  height: 60px !important;
+}
+.navbar-fixed .navbartop-btn {
+  line-height: 60px !important;
+}
+
+.navbar-fixed {
+  position: fixed !important;
+  left: 0;
+  right: 0;
+  top: 0;
+  padding: 12px 12px !important;
+  box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
+  animation: .6s slideDown forwards;
+  background-color: white;
+  color: $gray-600;
+}
+
+.navbar-toggle {
+  display: none !important;
+  position: absolute !important;
+  right: 5px;
+  top: 5px;
+}
+.icon-button {
+  .mat-icon {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: map-get($map: $grid-breakpoints, $key: md)) {
+
+  .navbar-opened:host .container {
+    height: auto !important;
+    padding: 0px !important;
+}
+
+ .navbar-toggle {
+      display: block !important;
+  }
+  .top-navbar {
+      display: none !important;
+  }
+  .navbar-opened:host {
+      .top-navbar {
+          display: block !important;
+          width: 100% !important;
+          height: auto;
+          flex: none !important;
+          color: $gray-600;
+          background: #f3f3f3;
+          z-index: 1000;
+      }
+  }
+  .navbar-opened:host .top-navbar a {
+      display: block;
+      width: 100%;
+      line-height: 56px !important;
+  }
 }
 
