--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,20 +3,12 @@
     <div class="color-bg-secondary"></div>
     <div class="color-bg-primary"></div>
   </div>
-  <div class="home-section">
-    <nav class="container-fluid">
-      <div class="row pt-4">
-        <div class="col-3 d-flex justify-content-start px-3 ps-5 py-3">Nadia HAMA DJIBO</div>
-        <div class="col-9 d-flex justify-content-end px-2">
-          <span class="px-3 py-3">Mes expériences</span>
-          <span class="px-3 py-3">A propos de moi</span>
-          <span class="px-3 py-3">Mon cv</span>
-          <span class="px-3 py-3">Contact</span>
-        </div>
-      </div>
-    </nav>
+
+  <div class="home-section d-flex align-items-end">
+    <app-header></app-header>
+
     <div class="container-fluid home-section-content d-flex flex-column justify-content-center">
-      <div class="row d-flex justify-content-center">
+      <div class="row d-flex justify-content-center align-items-end">
         <div class="col-12 col-md-8 d-flex flex-column ps-4 ps-md-0">
           <div class="fs-6">Bonjour, je m'appelle</div>
           <div class="h1">Nadia HAMA DJIBO</div>
@@ -168,23 +160,4 @@
 
 
 <!-- *************** *** section pied de page *** ******************* -->
-<div class="d-flex flex-column justify-content-center align-items-center pt-5 bg-color-primary color-light">
-  <div class="d-flex justify-content center pb-5">
-    <span class="px-3 fw-bold">Mes expériences</span>
-    <span class="px-3 fw-bold">A propos de moi</span>
-    <span class="px-3 fw-bold">Mon cv</span>
-    <span class="px-3 fw-bold">Contact</span>
-  </div>
-
-  <div class="d-flex flex-column align-items-center">
-    <span class="fw-bold">Contact</span>
-    <span>contact@gmail.com</span>
-    <span>42 rue salvador allende</span>
-    <span>Nanterre</span>
-    <span>06 01 02 03 04</span>
-  </div>
-
-  <div class="d-flex justify-content-center pt-5 pb-3">
-    Nadia HAMA DJIBO © 2021
-  </div>
-</div>
+<app-footer>
