--- a/scss/custom-styles.scss
+++ b/scss/custom-styles.scss
@@ -34,14 +34,14 @@ $body-color:    $gray-600 ;
 
 
 // ********************* ***  page d'acceuil (home) *** ************************* //
-.home-section, .contact-section{
+.home-section, .contact-section, .blog-section{
   z-index: 100;
   color: white;
 }
 .home-section{
   height: 75vh;
 }
-.contact-section{
+.contact-section, .blog-section{
   height: 50vh;
 }
 
@@ -114,7 +114,7 @@ $body-color:    $gray-600 ;
   cursor: pointer;
 }
 
-.btn-outline{
+.btn-outline-light, .btn-outline-primary{
   color: white;
   padding-left: 3.5rem;
   padding-right: 3.5rem;
@@ -125,6 +125,10 @@ $body-color:    $gray-600 ;
   width: fit-content;
   cursor: pointer;
   border: 1px white solid;
+}
+.btn-outline-primary{
+  color: $primary;
+  border: 1px $primary solid;
 }
 
 .crop-circle{
@@ -145,7 +149,12 @@ $body-color:    $gray-600 ;
 .color-light{
   color: white;
 }
-
+.color-primary{
+  color: $primary;
+}
+.color-secondary{
+  color: $secondary;
+}
 
 
 //************** *** header *** *************************//
