--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,1 +1,58 @@
-<p>blog works!</p>
+<div class="color-bg color-bg-mini d-flex">
+  <div class="color-bg-secondary"></div>
+  <div class="color-bg-primary"></div>
+</div>
+
+<div class="contact-section d-flex align-items-end">
+  <app-header></app-header>
+
+  <div class="container-fluid home-section-content d-flex flex-column justify-content-center">
+    <div class="row d-flex justify-content-center align-items-end">
+      <div class="col-12 col-md-8 ps-4 ps-md-0">
+        <div class="h1">Blog</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid py-5 ">
+  <div class="row d-flex justify-content-start px-5">
+      <div *ngFor="let article of articles" class="col-10 col-md-3 mx-md-4 py-5 my-3">
+        <div class="blog-item-short d-flex flex-column">
+          <div class="h5 mb-1">{{article.title}}</div>
+          <div class="subhead pb-3 color-secondary">{{article.subhead}}</div>
+          <p>
+            {{article.shortText}}
+          </p>
+        </div>
+        <div class="btn-outline-primary my-3">Lire l'article</div>
+      </div>
+    </div>
+</div>
+
+<div class="container-fluid quick-contact-section d-flex align-items-center justify-content-center">
+  <div class="row d-flex align-items-center jutify-content-center">
+    <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
+      <div class="fw-bold fs-4 ps-2 py-3 py-md-0">Contact facile</div>
+    </div>
+    <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
+      <div class="d-flex flex-column px-2">
+        <label class="pb-2"  from="name">Nom</label>
+        <input type="text" name="name" class="form-control theme-input">
+      </div>
+      <div class="d-flex flex-column px-2">
+        <label class="pb-2" for="email">email</label>
+        <input type="text" name="email" class="form-control theme-input">
+      </div>
+    </div>
+    <div class="col-12 col-md-5 pt-3 pt-md-0 d-flex align-items-center justify-content-center">
+      <div class="d-flex flex-column ps-2 pe-4">
+        <label class="pb-2"  for="message">Message</label>
+        <input type="text" name="message" class="form-control theme-input">
+      </div>
+      <div class="btn-primary align-self-end d-flex align-items-center me-1" style="height: 50px;">Envoyer</div>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
+
