implementation of routing

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -82,7 +82,7 @@
 
 
 <!-- *************** *** section votre future alternante *** ******************* -->
-<div class="container-fluid">
+<div class="container-fluid pt-5">
   <div class="row bg-color-secondary color-light">
     <div class="col-12 col-md-5 pt-5 pb-3 py-md-5 d-flex justify-content-center align-items-center">
       <div class="crop-circle" style="background-image: url('../../../assets/images/pro-1.jpeg'); width: 250px; height:250px; background-size: cover;"></div>
