--- a/scss/custom-styles.scss
+++ b/scss/custom-styles.scss
@@ -186,7 +186,7 @@ $body-color:    $gray-600 ;
   box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
   animation: .6s slideDown forwards;
   background-color: white;
-  color: $gray-600;
+  color: $gray-600 ;
 }
 
 .navbar-toggle {
@@ -232,3 +232,10 @@ $body-color:    $gray-600 ;
   }
 }
 
+
+.a{
+  cursor: pointer;
+}
+.a:hover{
+  color: $gray-300
+}
