--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,7 +9,7 @@
   <div class="container-fluid home-section-content d-flex flex-column justify-content-center">
     <div class="row d-flex justify-content-center align-items-end">
       <div class="col-12 col-md-8 ps-4 ps-md-0">
-        <div class="h1">Contact</div>
+        <div class="h1 color-light">Contact</div>
       </div>
     </div>
   </div>
