--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
       <div class="row d-flex justify-content-center align-items-end">
         <div class="col-12 col-md-8 d-flex flex-column ps-4 ps-md-0">
           <div class="fs-6">Bonjour, je m'appelle</div>
-          <div class="h1">Nadia HAMA DJIBO</div>
+          <div class="h1 color-light">Nadia HAMA DJIBO</div>
           <div class="fs-6 fw-bold">Je recherche une alternance dans le droit.</div>
         </div>
       </div>
@@ -83,13 +83,18 @@
 
 <!-- *************** *** section votre future alternante *** ******************* -->
 <div class="container-fluid pt-5">
-  <div class="row bg-color-secondary color-light">
-    <div class="col-12 col-md-5 pt-5 pb-3 py-md-5 d-flex justify-content-center align-items-center">
-      <div class="crop-circle" style="background-image: url('../../../assets/images/pro-1.jpeg'); width: 250px; height:250px; background-size: cover;"></div>
+  <div class="row color-light" style="background-image: url('../../../assets/images/office.jpeg'); background-size: cover; position: relative;">
+    <div class="col-12 filter"></div>
+    <div class="col-12 filter-content col-md-5 pt-5 pb-3 py-md-5 d-flex justify-content-center align-items-center">
+      <div class="crop-circle"
+        style="background-image: url('../../../assets/images/pro-1.jpeg'); width: 250px; height:250px; background-size: cover;">
+      </div>
     </div>
-    <div class="col-12 py-5 col-md-7 d-flex flex-column px-5 align-items-center align-items-md-start">
-      <div class="h2 ">Votre future alternante</div>
-      <div class="p">Ma motivation et mes compétences feront de moi l’attenante parfaite pour votre entreprise. feront de moi l’attenante parfaite pour votre entreprise.</div>
+    <div class="col-12 filter-content py-5 col-md-7 d-flex flex-column px-5 align-items-center align-items-md-start">
+      <div class="h2 color-light ">Votre future alternante</div>
+      <div class="p">Ma motivation et mes compétences feront de moi l’attenante parfaite pour votre entreprise. feront
+        de moi l’attenante parfaite pour votre entreprise. motivation et mes compétences feront de moi l’attenante
+        parfaite pour votre entreprise. feront de moi l’attenante parfaite pour votre entreprise.</div>
       <div class="btn-primary mt-5">Contactez moi !</div>
     </div>
   </div>
