--- a/scss/custom-styles.scss
+++ b/scss/custom-styles.scss
@@ -1,6 +1,7 @@
 
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
 
 
 // ********************* ***  Police d'écriture *** ************************* //
@@ -17,9 +18,13 @@ $headings-font-weight:        $font-weight-black;
 $font-weight-base:            $font-weight-light;
 $headings-margin-bottom:      $spacer * 1.5;
 
+$font-weight-light:           100;
+$font-weight-normal:          100;
+
 p{
   margin-bottom: $spacer;
 }
+
 
 // ********************* ***  Couleurs *** ************************* //
 $gray-600: #6c757d;
@@ -28,7 +33,7 @@ $primary:       #787E7C;
 $secondary:     #B9AFAE;
 $light:         #FAFAFA;
 $body-color:    $gray-600 ;
-$headings-color: $gray-900;
+$headings-color: $gray-600;
 
 
 
@@ -184,7 +189,7 @@ $headings-color: $gray-900;
   left: 0;
   right: 0;
   top: 0;
-  padding: 12px 12px !important;
+  padding: 10px 10px !important;
   box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
   animation: .6s slideDown forwards;
   background-color: white;
@@ -194,8 +199,8 @@ $headings-color: $gray-900;
 .navbar-toggle {
   display: none !important;
   position: absolute !important;
-  right: 5px;
-  top: 5px;
+  right: 10px;
+  top: 20px;
 }
 .icon-button {
   .mat-icon {
@@ -211,6 +216,10 @@ $headings-color: $gray-900;
 
 .filter-content{
   z-index: 0;
+}
+
+.mat-body, .mat-body-1, .mat-typography {
+  font: $font-weight-base $font-size-base $font-family-sans-serif, "Helvetica Neue", sans-serif;
 }
 
 @media (max-width: map-get($map: $grid-breakpoints, $key: md)) {
@@ -259,7 +268,7 @@ $headings-color: $gray-900;
 
 .header-bg-primary{
   background-color: $primary;
-  height: 15vh;
+  height: 10vh;
 }
 
 .illustration{
