--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -1,1 +1,37 @@
-<p>cv works!</p>
+<app-header></app-header>
+<div class="header-bg-primary"></div>
+
+ <!-- <iframe style="background-color: white;"src="../../../assets/images/nadia.pdf#toolbar=0" width="100%" height="1200px"> </iframe> -->
+  <div class="d-flex">
+    <img src="../../../assets/images/nadia2.png" alt="">
+  </div>
+
+ <a style="width: 200px; height: 200px" href="../../../assets/images/nadia.pdf">Téléchargez le fichier ici! </a>
+
+
+
+ <div class="container-fluid quick-contact-section d-flex align-items-center justify-content-center">
+  <div class="row d-flex align-items-center jutify-content-center">
+    <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
+      <div class="fw-bold fs-4 ps-2 py-3 py-md-0">Contact facile</div>
+    </div>
+    <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
+      <div class="d-flex flex-column px-2">
+        <label class="pb-2"  from="name">Nom</label>
+        <input type="text" name="name" class="form-control theme-input">
+      </div>
+      <div class="d-flex flex-column px-2">
+        <label class="pb-2" for="email">email</label>
+        <input type="text" name="email" class="form-control theme-input">
+      </div>
+    </div>
+    <div class="col-12 col-md-5 pt-3 pt-md-0 d-flex align-items-center justify-content-center">
+      <div class="d-flex flex-column ps-2 pe-4">
+        <label class="pb-2"  for="message">Message</label>
+        <input type="text" name="message" class="form-control theme-input">
+      </div>
+      <div class="btn-primary align-self-end d-flex align-items-center me-1" style="height: 50px;">Envoyer</div>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
