--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
         <div class="col-12 col-md-8 d-flex flex-column ps-4 ps-md-0">
           <div class="fs-6">Bonjour, je m'appelle</div>
           <div class="h1 color-light">Nadia HAMA DJIBO</div>
-          <div class="fs-6 fw-bold">Je recherche une alternance dans le droit.</div>
+          <div class="fs-6">Je recherche une alternance dans le droit.</div>
         </div>
       </div>
     </div>
