--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column justify-content-center align-items-center pt-5 bg-color-primary color-light">
   <div class="d-flex justify-content center pb-5">
-    <span class="px-3 fw-bold">Mes expériences</span>
-    <span class="px-3 fw-bold">A propos de moi</span>
-    <span class="px-3 fw-bold">Mon cv</span>
-    <span class="px-3 fw-bold">Contact</span>
+    <span class="px-3 ">Mes expériences</span>
+    <span class="px-3 ">A propos de moi</span>
+    <span class="px-3 ">Mon cv</span>
+    <span class="px-3 ">Contact</span>
   </div>
 
   <div class="d-flex flex-column align-items-center">
